Add responsive image lecture

--- a/web.config
+++ b/web.config
@@ -15,6 +15,7 @@
   <system.webServer>
     <staticContent>
       <mimeMap fileExtension=".md" mimeType="text/xml"/>
+      <mimeMap fileExtension=".webp" mimeType="image/webp"/>
     </staticContent>
   </system.webServer>
 </configuration>
