--- a/web.config
+++ b/web.config
@@ -14,7 +14,7 @@
   </system.web>
   <system.webServer>
     <staticContent>
-      <mimeMap fileExtension=".md" mimeType="text/xml"/>
+      <mimeMap fileExtension=".md" mimeType="text/markdown"/>
       <mimeMap fileExtension=".webp" mimeType="image/webp"/>
     </staticContent>
   </system.webServer>
